Run annotation processors with Maven